language/move-lang/tests/move_check/expansion/module_alias_as_type.exp
error: 

   ┌── tests/move_check/expansion/module_alias_as_type.move:6:14 ───
   │
 6 │     use 0x1::X;
   │              ^ Unused 'use' of alias 'X'. Consider removing it
   │

error: 

   ┌── tests/move_check/expansion/module_alias_as_type.move:7:16 ───
   │
 7 │     fun foo(x: X) {}
   │                ^ Unbound type 'X' in current scope
   │

